Partially update determiners doc page

--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -104,8 +104,8 @@ Add one of these before your noun and you have provided a quantity determiner (a
 cardinal number).
 
 <HisyeoTabs>
-  <p>cok ü son sütüö sün zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
-  <p>puswen ü ni cö son dus tiü ëvun oxon do piek cö piek süwit övo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
+  <p>son sütüö lı cok sün zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
+  <p>nü puswen son dus tiü ëvun oxon do piek piek süwit övo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
 </HisyeoTabs>
 
 Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
@@ -117,8 +117,8 @@ Place a number word as a regular modifier (after the head noun) and it will
 represent a relative position of an item in a sequence (an ordinal number).
 
 <HisyeoTabs>
-  <p>nomü son do sün ximol ü süko noyo.&emsp;<em>"The third tree from the left is my favorite."</em></p>
-  <p>ü noyo lı umo nonkü do si cok.&emsp;<em>"I was the fourth person to leave."</em></p>
+  <p>lı nomü son do sün ximol, ü süko noyo.&emsp;<em>"The third tree from the left is my favorite."</em></p>
+  <p>noyo lı umo nonkü do lı cok.&emsp;<em>"I was the fourth person to leave."</em></p>
 </HisyeoTabs>
 
 ### Multiplier
@@ -127,18 +127,18 @@ Place a number word after (<HisyeoWord is='öni'/>) and use this as a modifier t
 represent the number of times something is to be multiplied.
 
 <HisyeoTabs>
-  <p>yünyoü ü poholon cö zınkon öni düi.&emsp;<em>"The closet has double doors."</em></p>
-  <p>kiösö ëto ü loı köi tüu opunyun cö zoston öni nonkü.&emsp;<em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
+  <p>poholon yünyoü zınkon öni düi.&emsp;<em>"The closet has double doors."</em></p>
+  <p>niün lı kiösö ëto köi tüu zoston öni nonkü pı opunyun.&emsp;<em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
 </HisyeoTabs>
 
 ### Adverbial
 
-Place a number word before the head word of a verb phrase to represent that the
-action of the verb phrase occurred a certain number of times.
+There's no syntactic way to make an adverbial number in Hisyëö. However, it's
+easy enough to supply an adverbial phrase that suffices.
 
 <HisyeoTabs>
-  <p>si kut mokon tölki ü noyo cö piek potuk yë öni mulö&emsp;<em>"I have only once eaten pizza"</em></p>
-  <p>küu düi yön ü nimü cö sikot hoköli hön xokön lono.&emsp;<em>You should use your toothbrush twice a day.</em></p>
+  <p>noyo pı kut woküt tölki mokon si piek potuk yë öni mulö&emsp;<em>"I have only once eaten pizza"</em></p>
+  <p>nimü pı düi küu yön sikot hoköli hön xokön lono.&emsp;<em>You should use your toothbrush twice a day.</em></p>
 </HisyeoTabs>
 
 ### Distributive
