improve intro page

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -22,9 +22,11 @@ Additionally, the grammar is considered an analytic isolating language like its
 forebears [Kokanu](https://www.kokanu.com/) and [Toki
 Pona](https://tokipona.org). Analytic isolating languages like these remove the
 mutation of words by making grammatical syntax separate particle words. The
-grammar might be more complex than some minimalist languages but the design is
-intented to help make Hisyëö less ambiguous overall which supports the
-neutrality and expressivity principles.
+grammar provides more functionality than some minimalist languages and certain
+conventions are established to ensure the language can be a more functional
+replacement of a natural language. This does add complexity and bloat but it
+also reduces ambiguity, increases expressivity, and presents an easier
+language acquisition path for most learners.
 - **Succinctness**, words are kept to a minimum where possible but information
 density is strongly emphasized so that the language can still be used for
 translations of scientific and artistic media. This principle is not the same as
@@ -38,9 +40,9 @@ although there will be times where you can build a similar concept by using
 compound phrases and this is okay and provides users with additional ways to
 clarify their intended meaning.
 - **Expressivity**, the language is designed to be highly expressive in its word
-and grammar choices. With just over 800 words, there's a lot more ways to
+and grammar choices. With just over 840 words, there's a lot more ways to
 express feelings, emotions, objects, actions and anything else you can think of.
-Additionally, the grammar has changed considerably from its origin to allow for
+Additionally, the grammar has been greatly enhanced from its origin to allow for
 handling of tense, aspect, mood, causation, and volition. The language has been
 tested against a multitude of translation media to confirm that no concept is
 too challenging or too verbose to express.
@@ -48,27 +50,31 @@ too challenging or too verbose to express.
 Some of these principles and the language features that you will learn may seem
 contrary to the practices of any self-respecting [International Auxiliary
 Language](http://interlanguages.net). Hisyëö does not strictly follow the
-tradional principles. The creators believe that too much effort within IAL
-development is spent on regularization and cherrypicking existing lexical and
-grammatical tactics of natural languages (while applying some first language
-bias regardless of the best intentions). Instead, Hisyëö pushes closer to an
+tradional principles (and isn't seeking to fit in any kind of IAL-shaped box).
+The creators believe that too much effort within IAL development is spent on
+regularization and cherrypicking existing lexical and grammatical tactics of
+natural languages (while applying some first language bias regardless of the
+best intentions). Instead, Hisyëö pushes closer to an
 [artlang](https://en.wikipedia.org/wiki/Artistic_language) or a
-[loglang](https://loglangs.wiki/Portal) by focusing less on ease-of-learning and
-instead striving for a more complete linguistic system.
+[loglang](https://loglangs.wiki/Portal) by focusing less on the linguistic
+equivalent of [code golf](https://en.wikipedia.org/wiki/Code_golf) and instead
+striving for a more complete "batteries-included" language.
 
 ## Is Hisyëö An International Auxiliary Language?
 
 Hisyëö **does not** intend to be an international auxiliary language. Instead,
 it strives to be a diverse community of people that seek to create a culture of
-acceptance, respect, love, nonconformity and creativity. Through the language
+acceptance, respect, love, solidarity and creativity. Through the language
 and activities of the servers, chat rooms and local events, we hope to *reenact*
 the future state of humanity. A [living history](https://en.wikipedia.org/wiki/Living_history) of
 the future, if you will.
 
+:::danger Disclaimer
 We do not condone the colonization or assimilation of peoples but we believe
 that the current cultures of our world are designed to isolate us into nation
 states to fund the machinations of capitalists and despots. Therefore, we
 respectfully seek to timeskip our way into a future all-human society.
+:::
 
 ## Where did Hisyëö come from?
 
@@ -125,13 +131,13 @@ write a few basic sentences.
 
 1. Words do not ever mutate, special particles are used to introduce phrases of
    the sentence.
-2. Verbs, nouns, and modifiers (adjectives/adverbs) can be used as each other
-   depending on what role they play in the sentence.
-3. There is no word for "the".
-4. The basic structure of a sentence is (in any order) one verb phrase and any
-   amount of additional noun phrases.
-5. If the verb prhase is placed as the first constituent of a sentence, then the
-   particle that introduces the phrase can be omitted.
+2. Verbs can be used as nouns, adjectives, or adverbs depending on what particle
+   introduced them into the sentence. 
+3. There are no definiteness articles like "the" or "a/an".
+4. The basic structure of a sentence is any amount of phrasal constituents
+   introduced by prepositions (thematic phrases) or verbs (object phrases).
+5. If the agent/experiencer phase is placed as the first constituent of a
+   sentence, then the particle that introduces the phrase can be omitted.
 
 ### Usage
 
@@ -179,9 +185,10 @@ Some basic words to get you started on sentence construction.
 
 ## Next Steps
 
-Check out the lessons for a guided walkthrough of how to use Hisyëö.
+Check out the [lessons](category/lessons) for details on how to use Hisyëö in a
+multitude of different contexts.
 
-Join the community and help others learn the language.
+Join the [community](community) and help others learn the language.
 
 Study the reference manual for a more linguistic-heavy description of the language.
 
