add more test sentence translations

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -41,24 +41,24 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>niltügu si hüzon.&emsp;<em>The rain has stopped.</em></p>
 <p>pı zelen ke niltügu hüzon.&emsp;<em>Soon the rain will stop.</em></p>
 <p>noyo xiwon vos pı zelen niltügu hüzon.&emsp;<em>I hope the rain stops soon.</em></p>
-<p>&emsp;<em>Once wild animals lived here.</em></p>
-<p>&emsp;<em>Slowly she looked around.</em></p>
-<p>&emsp;<em>Go away!</em></p>
-<p>&emsp;<em>Let's go!</em></p>
-<p>&emsp;<em>You should go.</em></p>
-<p>&emsp;<em>I will be happy to go.</em></p>
-<p>&emsp;<em>He will arrive soon.</em></p>
-<p>&emsp;<em>The baby's ball has rolled away.</em></p>
-<p>&emsp;<em>The two boys are working together.</em></p>
-<p>&emsp;<em>This mist will probably clear away.</em></p>
-<p>&emsp;<em>Lovely flowers are growing everywhere.</em></p>
-<p>&emsp;<em>We should eat more slowly.</em></p>
-<p>&emsp;<em>You have come too soon.</em></p>
-<p>&emsp;<em>You must write more neatly.</em></p>
-<p>&emsp;<em>Directly opposite stands a wonderful palace.</em></p>
-<p>&emsp;<em>Henry's dog is lost.</em></p>
-<p>&emsp;<em>My cat is black.</em></p>
-<p>&emsp;<em>The little girl's doll is broken.</em></p>
+<p>pı kut ü zonwul hönyo nıwos hoi övo.&emsp;<em>Once wild animals lived here.</em></p>
+<p>pı dilë ü niün vohoso si. &emsp;<em>Slowly she looked around.</em></p>
+<p>küu lı cok ze.&emsp;<em>Go away!</em></p>
+<p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
+<p>nimü küu lı lö.&emsp;<em>You should go.</em></p>
+<p>noyo ke lı xowosë hön do lı lö.&emsp;<em>I will be happy to go.</em></p>
+<p>niün ke lı gö hoi övo pı zelen.&emsp;<em>He will arrive soon.</em></p>
+<p>gundolë yë lözic lı si lö pı ınvultin sün poxö.&emsp;<em>The baby's ball has rolled away.</em></p>
+<p>düi umo moskül xonluk wëloı ovek xokön dizel.&emsp;<em>The two boys are working together.</em></p>
+<p>üsmon ximu onö pı könën ke di vonmot.&emsp;<em>This mist will probably clear away.</em></p>
+<p>inpoli hosin lı niök hoi xokön.&emsp;<em>Lovely flowers are growing everywhere.</em></p>
+<p>nü küu mokon pı dilë eswen.&emsp;<em>We should eat more slowly.</em></p>
+<p>nimü di si hoi övo pı hëlxun otıkon.&emsp;<em>You have come too soon.</em></p>
+<p>nimü küu cukto pı cinmi eswen.&emsp;<em>You must write more neatly.</em></p>
+<p>hön öpöstü müstokin lı totsı ü nıwos moxo cënpö küzoü.&emsp;<em>Directly opposite stands a wonderful palace.</em></p>
+<p>zowo yë umo Henli köi yosten yök titon dündon. &emsp;<em>Henry's dog is lost.</em></p>
+<p>mocko noyo lı nëlö.&emsp;<em>My cat is black.</em></p>
+<p>döcui umo yë umo wohi xonluk cüti lı kopüt.&emsp;<em>The little girl's doll is broken.</em></p>
 <p>&emsp;<em>I usually sleep soundly.</em></p>
 <p>&emsp;<em>The children ran after Jack.</em></p>
 <p>&emsp;<em>I can play after school.</em></p>
