--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -15,37 +15,52 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 A constructed language for people around the world to communicate with each
 other. Hisyëö is designed using these principles:
-- **Neutrality**, words are sourced from all world languages proportional to the
-square root of their world population of L1 speakers. Many people who would come
-to learn Hisyëö may have a small anchor of familiarity within the lexicon.
+
+### Neutrality
+Words are sourced from all world languages proportional to the square root of
+their world population of L1 speakers. Many people who would come to learn
+Hisyëö may have a small anchor of familiarity within the lexicon.
+
 Additionally, the grammar is considered an analytic isolating language like its
 forebears [Kokanu](https://www.kokanu.com/) and [Toki
 Pona](https://tokipona.org). Analytic isolating languages like these remove the
-mutation of words by making grammatical syntax separate particle words. The
-grammar provides more functionality than some minimalist languages and certain
-conventions are established to ensure the language can be a more functional
-replacement of a natural language. This does add complexity and bloat but it
-also reduces ambiguity, increases expressivity, and presents an easier
-language acquisition path for most learners.
-- **Succinctness**, words are kept to a minimum where possible but information
-density is strongly emphasized so that the language can still be used for
-translations of scientific and artistic media. This principle is not the same as
-the more strict principle of *minimalism* in that it is meant to allow for
-including singular words from (1) concepts that appear in a multitude of
-conversations and (2) concepts that would need complex nested clauses that can
-otherwise derail a sentence from comprehension due to the added working memory
-to develop an understanding of the sentence. Careful consideration is made that
-the semantic spaces that each individual word covers do not overlap other words
-although there will be times where you can build a similar concept by using
-compound phrases and this is okay and provides users with additional ways to
-clarify their intended meaning.
-- **Expressivity**, the language is designed to be highly expressive in its word
-and grammar choices. With just over 840 words, there's a lot more ways to
-express feelings, emotions, objects, actions and anything else you can think of.
+mutation of words by making grammatical syntax separate particle words. While
+this might be different to how some people are used to, it reduces the amount of
+learning needed for proficiency.
+
+The grammar provides more functionality than some minimalist languages and
+certain conventions are established to ensure the language can be a more
+functional replacement of a natural language. This does add complexity and
+reduces the neutrality but it also reduces ambiguity and increases both
+succinctness and expressivity.
+
+### Succinctness
+Words are kept to a minimum where possible but information density is strongly
+emphasized so that the language can still be used for translations of scientific
+and artistic media. This principle is not the same as the more strict principle
+of *minimalism* in that it is meant to allow for including singular words from
+(1) concepts that appear in a multitude of conversations and (2) concepts that
+would need complex nested clauses that can otherwise derail a sentence from
+comprehension due to the added working memory to develop an understanding of the
+sentence.
+
+Careful consideration is made that the semantic spaces that each individual word
+covers do not overlap other words although there will be times where you can
+build a similar concept by using compound phrases and this is okay and provides
+users with additional ways to clarify their intended meaning.
+
+
+### Expressivity
+The language is designed to be highly expressive in its word and grammar
+choices. With just over 840 words, there's a lot more ways to express feelings,
+emotions, objects, actions and anything else you can think of.
+
 Additionally, the grammar has been greatly enhanced from its origin to allow for
 handling of tense, aspect, mood, causation, and volition. The language has been
 tested against a multitude of translation media to confirm that no concept is
 too challenging or too verbose to express.
+
+## Is Hisyëö An International Auxiliary Language?
 
 Some of these principles and the language features that you will learn may seem
 contrary to the practices of any self-respecting [International Auxiliary
@@ -59,22 +74,6 @@ best intentions). Instead, Hisyëö pushes closer to an
 [loglang](https://loglangs.wiki/Portal) by focusing less on the linguistic
 equivalent of [code golf](https://en.wikipedia.org/wiki/Code_golf) and instead
 striving for a more complete "batteries-included" language.
-
-## Is Hisyëö An International Auxiliary Language?
-
-Hisyëö **does not** intend to be an international auxiliary language. Instead,
-it strives to be a diverse community of people that seek to create a culture of
-acceptance, respect, love, solidarity and creativity. Through the language
-and activities of the servers, chat rooms and local events, we hope to *reenact*
-the future state of humanity. A [living history](https://en.wikipedia.org/wiki/Living_history) of
-the future, if you will.
-
-:::danger Disclaimer
-We do not condone the colonization or assimilation of peoples but we believe
-that the current cultures of our world are designed to isolate us into nation
-states to fund the machinations of capitalists and despots. Therefore, we
-respectfully seek to timeskip our way into a future all-human society.
-:::
 
 ## Where did Hisyëö come from?
 
