Fix missing "time"

--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -138,7 +138,7 @@ easy enough to supply an adverbial phrase that suffices.
 
 <HisyeoTabs>
   <p>noyo pı kut woküt tölki mokon si piek potuk yë öni mulö&emsp;<em>"I have only once eaten pizza"</em></p>
-  <p>nimü pı düi küu yön sikot hoköli hön xokön lono.&emsp;<em>You should use your toothbrush twice a day.</em></p>
+  <p>nimü pı düi woküt küu yön sikot hoköli hön xokön lono.&emsp;<em>You should use your toothbrush twice a day.</em></p>
 </HisyeoTabs>
 
 ### Distributive
