add negative and causative examples

--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -237,12 +237,27 @@ verb.
 The negatitive verb modifier (<HisyeoWord is='yök'/>) turns the verb phrase
 into the negated version of itself. In English, this is the "not" adverb.
 
+<HisyeoTabs>
+    <p>hön do yök züyı ozüul yonlüs, noyo lı si lö pı vöhon.&emsp;<em>Not knowing any better, I went ahead.</em></p>
+    <p>nimü puswen yök do xontün cızi.&emsp;<em>You don’t need to trouble yourself.</em></p>
+    <p>mötivö yöcno lı yök do vunsüt.&emsp;<em>The objective is not to lose.</em></p>
+    <p>küu tüu yök ulyö.&emsp;<em>Don't do that.</em></p>
+</HisyeoTabs>
+
 ### Causative
 
 The causative verb modifier (<HisyeoWord is='ëo'/>) turns the verb phrase into
 the causative version of itself. In English, this is often accomplished using
-the "to make" helper verb but sometimes there is a completely separate verb for
-the causative version of an action.
+the "to have" or "to make" helper verb but sometimes there is a completely
+separate verb for the causative version of an action.
+
+<HisyeoTabs>
+    <p>noyo ölë nıwos zonwul lı ëo mötö müt xünyu.&emsp;<em>I had the barn burned down.</em></p>
+    <p>nimü ölë niün poivön ëo nonto.&emsp;<em>You're making them cry.</em></p>
+    <p>umo Zon ke wëko ëo si vecko longı hoi nıwos niün.&emsp;<em>John will have his house painted.</em></p>
+    <p>öni pëüdo vohoso ëo si dënëmëk kon cukto niün.&emsp;<em>The students get their essays checked.</em></p>
+    <p>öni cüdo yë cigilsu ölë öni diyondë ke xokülü ëo öni cigilsu.&emsp;<em>The doctor will have the nurse call the patients.</em></p>
+</HisyeoTabs>
 
 ### Perfective
 
