add perfective example

--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -263,9 +263,20 @@ separate verb for the causative version of an action.
 
 The perfective verb modifier (<HisyeoWord is='si'/>) turns the verb phrase into
 the perfective version of itself. This describes the action as being a complete
-whole in contrast to the default aspect of verbs which is known as
-*imperfective*. There is no equivalent helper verb in English, sometimes the
-verb used to describe a whole action is completely different from the verb used
-to describe the action in the imperfective aspect.
+whole in contrast to the *imperfective* aspect (the default) of verbs which is
+describes the event from a moment adjacent or within the whole action's
+duration, a perspective from a single point along the entire occurrence. There
+is no equivalent helper verb in English, sometimes the verb used to describe a
+whole action is completely different from the verb used to describe the action
+in the imperfective aspect.
+
+<HisyeoTabs>
+    <p>noyo xüsten oütö.&emsp;<em>I wash the car.</em></p>
+    <p>noyo p'ılık xüstën oütö.&emsp;<em>I was washing the car.</em></p>
+    <p>noyo xüstën si oütö.&emsp;<em>I washed the car.</em></p>
+    <p>noyo p'ılık xüstën si oütö.&emsp;<em>I had washed the car.</em></p>
+    <p>noyo ke xüstën oütö.&emsp;<em>I shall wash the car.</em></p>
+    <p>noyo ke xüstën si oütö.&emsp;<em>I will have washed the car.</em></p>
+</HisyeoTabs>
 
 <HisyeoTooltip/>
