--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -155,12 +155,12 @@ exact numerical quantity the noun actually is.
 
 <HisyeoTabs>
   <p><strong>total/all:</strong>&emsp;möi sütüö noyo süko kontol doi osyen.&emsp;<em>All my friends like classical music</em></p>
-  <p><strong>highest/most:</strong>&emsp;övo lı numüno yë sonkon yë ëto möi.&emsp;<em>This is the most important example.</em></p>
+  <p><strong>highest/most:</strong>&emsp;övo lı numüno yë eswen sonkon en möi.&emsp;<em>This is the most important example.</em></p>
   <p><strong>high/many:</strong>&emsp;lı ëto toliko pësu yë do cöüvon.&emsp;<em>"There are many different ways to cook a meal."</em></p>
   <p><strong>higher/more:</strong>&emsp;lı eswen toliko yë do tüu övo, en vos noyo köi tüek vio kut.&emsp;<em>"There are more ways to do this than I can count."</em></p>
   <p><strong>lower/fewer:</strong>&emsp;lı mënüs umo hoi övo pı ipüdü.&emsp;<em>"There are less people here now."</em></p>
   <p><strong>low/some:</strong>&emsp;yoüti umo süko kon mühoyon.&emsp;<em>"Some people like camping."</em></p>
-  <p><strong>lowest/least:</strong>&emsp;noyo pı tölki yünyoü zötëstö oxon do cıvü yoüti möi cıno yë nıwos.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
+  <p><strong>lowest/least:</strong>&emsp;noyo pı tölki yünyoü zötëstö oxon do cıvü mënüs cıno yë nıwos en möi.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
   <p><strong>zero/none:</strong>&emsp;xünyu yë düi umo lı sumon.&emsp;<em>No two people are the same.</em></p>
 </HisyeoTabs>
 
