Add more determiner content

--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -23,7 +23,7 @@ noun unique.
 
 ## Quantity
 
-You can provide numbers as determiners and they allow you to specify the
+You can provide numerals as determiners and they allow you to specify the
 plurality or quantity of the nouns being referred to. Larger numbers are created
 by using the below method of assembling parts of a number:
 
@@ -113,7 +113,7 @@ indefinite article. Like the English article "a" or "an".
 
 ### Ordinal
 
-Place a number word as a regular modifier (after the head noun) and it will
+Place a numeral word as a regular modifier (after the head noun) and it will
 represent a relative position of an item in a sequence (an ordinal number).
 
 <HisyeoTabs>
@@ -123,7 +123,7 @@ represent a relative position of an item in a sequence (an ordinal number).
 
 ### Multiplier
 
-Place a number word after (<HisyeoWord is='öni'/>) and use this as a modifier to
+Place a numeral word after (<HisyeoWord is='öni'/>) and use this as a modifier to
 represent the number of times something is to be multiplied.
 
 <HisyeoTabs>
@@ -133,16 +133,34 @@ represent the number of times something is to be multiplied.
 
 ### Adverbial
 
-There's no syntactic way to make an adverbial number in Hisyëö. However, it's
-easy enough to supply an adverbial phrase that suffices.
+Use the same form as above but with the manner marker to get adverbial numerals.
 
 <HisyeoTabs>
-  <p>noyo pı kut woküt tölki mokon si piek potuk yë öni mulö&emsp;<em>"I have only once eaten pizza"</em></p>
-  <p>nimü pı düi woküt küu yön sikot hoköli hön xokön lono.&emsp;<em>You should use your toothbrush twice a day.</em></p>
+  <p>noyo pı öni kut tölki mokon si piek potuk yë öni mulö&emsp;<em>"I have only once eaten pizza"</em></p>
+  <p>nimü pı öni düi küu yön sikot hoköli hön lono xokön.&emsp;<em>You should use your toothbrush twice a day.</em></p>
 </HisyeoTabs>
 
 ### Distributive
-{/* TODO */}
+
+You can make distributive numerals using <HisyeoWord is='xokön'/>. First, to
+indicate that a predicate is occurring multiple times with the specified
+details, you would tack on a <HisyeoWord is='xokön'/> at the end of a noun
+phrase. Here's a non-distributive action and contrasting distributive one:
+
+<HisyeoTabs>
+  <p>umo Tom ü umo Zıl oköt son dıpo.&emsp;<em>"Tom and Jill carried three boxes."</em></p>
+  <p>umo Tom ü umo Zıl oköt son dıpo xokön.&emsp;<em>"Tom and Jill carried three boxes each."</em></p>
+</HisyeoTabs>
+
+In order to specify that something is double the degree of the associated
+noun-phrase. You prefix a quantity phrase with <HisyeoWord is='xokön'/>.
+
+<HisyeoTabs>
+    <p>motüo wohi noyo pı xokön düi diyondë hön do pı öpöstü lı ëo ınvultin öni düstu woküt.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
+    <p>lı sonkon ü do pesol zınkon, moliyü pı xokön son hön pıtün.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
+    <p>lolü nimü konzilü ëo xokön düi tönkö hön doho noyo.&emsp;<em>Your words feel doubly hurtful given my sacrifices.</em></p>
+</HisyeoTabs>
+
 ### Fractional
 {/* TODO */}
 
