Fix docs for some recent word changes

--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -40,7 +40,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>6</p></td><td><HisyeoText kind='latin'>toü</HisyeoText></td></tr>
         <tr><td><p>7</p></td><td><HisyeoText kind='latin'>xëti</HisyeoText></td></tr>
         <tr><td><p>8</p></td><td><HisyeoText kind='latin'>tukwos</HisyeoText></td></tr>
-        <tr><td><p>9</p></td><td><HisyeoText kind='latin'>tiso</HisyeoText></td></tr>
+        <tr><td><p>9</p></td><td><HisyeoText kind='latin'>eson</HisyeoText></td></tr>
         <tr><td><p>10</p></td><td><HisyeoText kind='latin'>dus</HisyeoText></td></tr>
         <tr><td><p>11</p></td><td><HisyeoText kind='latin'>önsu</HisyeoText></td></tr>
         <tr><td><p>12</p></td><td><HisyeoText kind='latin'>pole</HisyeoText></td></tr>
@@ -50,7 +50,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>16</p></td><td><HisyeoText kind='latin'>ses</HisyeoText></td></tr>
         <tr><td><p>17</p></td><td><HisyeoText kind='latin'>dus xëti</HisyeoText></td></tr>
         <tr><td><p>18</p></td><td><HisyeoText kind='latin'>dus tukwos</HisyeoText></td></tr>
-        <tr><td><p>19</p></td><td><HisyeoText kind='latin'>dus tiso</HisyeoText></td></tr>
+        <tr><td><p>19</p></td><td><HisyeoText kind='latin'>dus eson</HisyeoText></td></tr>
         <tr><td><p>20</p></td><td><HisyeoText kind='latin'>düi dus</HisyeoText></td></tr>
         <tr><td><p>21</p></td><td><HisyeoText kind='latin'>düi dus kut</HisyeoText></td></tr>
         <tr><td><p>22</p></td><td><HisyeoText kind='latin'>düi dus düi</HisyeoText></td></tr>
@@ -60,7 +60,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>234</p></td><td><HisyeoText kind='latin'>düi viyën son dus nonkü</HisyeoText></td></tr>
         <tr><td><p>1000</p></td><td><HisyeoText kind='latin'>cın kut</HisyeoText></td></tr>
         <tr><td><p>1,000,000</p></td><td><HisyeoText kind='latin'>cın düi</HisyeoText></td></tr>
-        <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>cın kut, tiso viyën tiso dus tiso</HisyeoText></td></tr>
+        <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>cın kut, eson viyën eson dus eson</HisyeoText></td></tr>
     </table>
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
@@ -75,7 +75,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>6</p></td><td><HisyeoText kind='abugida'>toü</HisyeoText></td></tr>
         <tr><td><p>7</p></td><td><HisyeoText kind='abugida'>xëti</HisyeoText></td></tr>
         <tr><td><p>8</p></td><td><HisyeoText kind='abugida'>tukwos</HisyeoText></td></tr>
-        <tr><td><p>9</p></td><td><HisyeoText kind='abugida'>tiso</HisyeoText></td></tr>
+        <tr><td><p>9</p></td><td><HisyeoText kind='abugida'>eson</HisyeoText></td></tr>
         <tr><td><p>10</p></td><td><HisyeoText kind='abugida'>dus</HisyeoText></td></tr>
         <tr><td><p>11</p></td><td><HisyeoText kind='abugida'>önsu</HisyeoText></td></tr>
         <tr><td><p>12</p></td><td><HisyeoText kind='abugida'>pole</HisyeoText></td></tr>
@@ -85,7 +85,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>16</p></td><td><HisyeoText kind='abugida'>ses</HisyeoText></td></tr>
         <tr><td><p>17</p></td><td><HisyeoText kind='abugida'>dus xëti</HisyeoText></td></tr>
         <tr><td><p>18</p></td><td><HisyeoText kind='abugida'>dus tukwos</HisyeoText></td></tr>
-        <tr><td><p>19</p></td><td><HisyeoText kind='abugida'>dus tiso</HisyeoText></td></tr>
+        <tr><td><p>19</p></td><td><HisyeoText kind='abugida'>dus eson</HisyeoText></td></tr>
         <tr><td><p>20</p></td><td><HisyeoText kind='abugida'>düi dus</HisyeoText></td></tr>
         <tr><td><p>21</p></td><td><HisyeoText kind='abugida'>düi dus kut</HisyeoText></td></tr>
         <tr><td><p>22</p></td><td><HisyeoText kind='abugida'>düi dus düi</HisyeoText></td></tr>
@@ -95,7 +95,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>234</p></td><td><HisyeoText kind='abugida'>düi viyën son dus nonkü</HisyeoText></td></tr>
         <tr><td><p>1000</p></td><td><HisyeoText kind='abugida'>cın kut</HisyeoText></td></tr>
         <tr><td><p>1,000,000</p></td><td><HisyeoText kind='abugida'>cın düi</HisyeoText></td></tr>
-        <tr><td><p>1,999</p></td><td><HisyeoText kind='abugida'>cın kut, tiso viyën tiso dus tiso</HisyeoText></td></tr>
+        <tr><td><p>1,999</p></td><td><HisyeoText kind='abugida'>cın kut, eson viyën eson dus eson</HisyeoText></td></tr>
     </table>
   </TabItem>
 </Tabs>
@@ -156,9 +156,9 @@ In order to specify that something is double the degree of the associated
 noun-phrase. You prefix a quantity phrase with <HisyeoWord is='xokön'/>.
 
 <HisyeoTabs>
-    <p>motüo wohi noyo pı xokön düi diyondë hön do pı öpöstü lı ëo ınvultin öni düstu woküt.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
+    <p>motüo wohi noyo pı xokön düi diyondë hön do pı elentët lı ëo ınvultin öni düstu woküt.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
     <p>lı sonkon ü do pesol zınkon, moliyü pı xokön son hön pıtün.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
-    <p>lolü nimü konzilü ëo xokön düi tönkö hön doho noyo.&emsp;<em>Your words feel doubly hurtful given my sacrifices.</em></p>
+    <p>lolü nimü oncëmon ëo xokön düi tönkö hön doho noyo.&emsp;<em>Your words feel doubly hurtful given my sacrifices.</em></p>
 </HisyeoTabs>
 
 ### Fractional
