--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -164,18 +164,18 @@ differentiation and causation).
   <p>noyo döstoc lipü in luvono sün sıskın moskül noyo.&emsp;<em>I got a letter from my brother.</em></p>
   <p>nimü köi döstoc yök vısun nëös sün nec öni tüek nucoto.&emsp;<em>You can't get all your news from the Internet.</em></p>
   <p>tömös övo sün dus eson tukwos dus.&emsp;<em>This manuscript is from the 1980s.</em></p>
-  <p>niün yünyoü si tömös do hoı zomo mulö sün sokovü müt sopoi.&emsp;<em>He had books piled from floor to ceiling.</em></p>
+  <p>niün yünyoü si tömös do hoı zomo mulö sün sokovü müt deku.&emsp;<em>He had books piled from floor to ceiling.</em></p>
   <p>niün lı si cok hoi lono xopëk sün sınsi Xıkogö.&emsp;<em>He departed yesterday from Chicago.</em></p>
-  <p>küu pono pı öpöstü sün pëlëtë.&emsp;<em>Face away from the wall!</em></p>
+  <p>küu pono pı elentët sün pëlëtë.&emsp;<em>Face away from the wall!</em></p>
   <p>lono kon wëloı sün suhot eson müt suhot tiü.<em>The working day runs from 9 am to 5 pm.</em></p>
-  <p>köi celël oxon doinpi sün lono dus xëti yë wuto xëti.&emsp;<em>Tickets are available from 17th July.</em></p>
+  <p>köi wedo oxon doinpi sün lono dus xëti yë wuto xëti.&emsp;<em>Tickets are available from 17th July.</em></p>
   <p>düstu tönkö nimü sün kut müt dus.&emsp;<em>Rate your pain from 1 to 10.</em></p>
   <p>küu socok do köto mikdol sün kut.&emsp;<em>Start counting from 1.</em></p>
   <p>nimü köi pëüdo ozüul sün söhoük müt kon cukto.&emsp;<em>You can study anything from math to literature.</em></p>
   <p>küu dënëmëk do dëko nı sün pındü niün yë dëko.&emsp;<em>Try to see it from his point of view.</em></p>
   <p>sün mulö yë nıwos küon ü nimü pı yoüti köi dëko pümi yë cënpö möi.&emsp;<em>From the top of the lighthouse you can just see the mainland.</em></p>
   <p>düi dus sün son dus kut di önsu.&emsp;<em>20 from 31 leaves 11.</em></p>
-  <p>lipü gelmıs yë voko mevüs lono pı yotkuwo pön do lı mevüs sün lozö yë pinton lono.&emsp;<em>A parasol protects from the sun's rays.</em></p>
+  <p>lipü gelmıs yë voko mevüs lono pı möcipo pön do lı mevüs sün lozö yë pinton lono.&emsp;<em>A parasol protects from the sun's rays.</em></p>
   <p>köson nı sün ülögun nulun sëlpö sovin.&emsp;<em>It's made from pure gold.</em></p>
 </HisyeoTabs>
 
@@ -250,7 +250,7 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 10. ⛔ Throughout or across (a distance in space). 
 <HisyeoTabs>
-  <p>noyo köi dëko lon yoüti öni kut cënpö yë zoük.&emsp;<em>I can see for miles.</em></p>
+  <p>noyo köi dëko lon yoüti öni kut cënpö yë mönpılı.&emsp;<em>I can see for miles.</em></p>
 </HisyeoTabs>
 11. ⛔ Used to introduce a subject of a to-infinitive clause.
 <HisyeoTabs>
@@ -259,17 +259,17 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 12. ✅ On behalf of.
 <HisyeoTabs>
-  <p>noyo celël cızi oxon niün.&emsp;<em>I will stand in for him.</em></p>
+  <p>noyo wedo cızi oxon niün.&emsp;<em>I will stand in for him.</em></p>
   <p>noyo köto oxon öni pöklön wik.<em>I speak for the Prime Minister.</em></p>
 </HisyeoTabs>
 13. ⛔ In the role or capacity of; instead of; in place of.
 <HisyeoTabs>
   <p>noyo yön dinci yë kudüdo hülü mıslı miëpıl kon conzodo.&emsp;<em>I used a hay bale for a bed.</em></p>
-  <p>niün yünyoü ünvünö ziziyo mıslı vos celël düuncit niün oxon nı.&emsp;<em>He's got a turnip for a brain.</em></p>
+  <p>niün yünyoü ünvünö ziziyo mıslı vos wedo düuncit niün oxon nı.&emsp;<em>He's got a turnip for a brain.</em></p>
 </HisyeoTabs>
 14. ⛔ In exchange for; in correspondence or equivalence with. 
 <HisyeoTabs>
-  <p>noyo döstoc tiü viyën muni nënko do celël oütö nokdo voxo.&emsp;<em>I got five hundred pounds for that old car!</em></p>
+  <p>noyo döstoc tiü viyën muni nënko do wedo oütö nokdo voxo.&emsp;<em>I got five hundred pounds for that old car!</em></p>
 </HisyeoTabs>
 15. ✅ In order to obtain or acquire.
 <HisyeoTabs>
@@ -290,7 +290,7 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 17. ⛔ To be, or as being. 
 <HisyeoTabs>
-  <p>küu konzilü yök noyo mıslı umo göwo.&emsp;<em>Don't take me for a fool.</em></p>
+  <p>küu oncëmon yök noyo mıslı umo göwo.&emsp;<em>Don't take me for a fool.</em></p>
 </HisyeoTabs>
 18. ⛔ (usually in the phrase 'for all') Despite, in spite of. 
 <HisyeoTabs>
@@ -453,7 +453,7 @@ finite physical space or actual time periods. In English, this represents some
 of the senses of the word "for".
 
 <HisyeoTabs>
-  <p>noyo köi dëko lon yoüti öni kut cënpö yë zoük.&emsp;<em>"I can see for kilometres"</em></p>
+  <p>noyo köi dëko lon yoüti öni kut cënpö yë mönpılı.&emsp;<em>"I can see for kilometres"</em></p>
   <p>nimü lı gö lon üsën zık.&emsp;<em>"How old are you?"</em></p>
   <p>niün köntësto vio köto lon yoüti lono hön döcui.&emsp;<em>They argued for days over a toy.</em></p>
 </HisyeoTabs>
@@ -513,7 +513,7 @@ in some contextually dependent manner. In English, this represents some of the
 senses of the word "of".
 
 <HisyeoTabs>
-  <p>niün pı xoinpo lı vonmot yë kon konzilü umo.&emsp;<em>"He seemed devoid of human feelings."</em></p>
+  <p>niün pı xoinpo lı vonmot yë kon oncëmon umo.&emsp;<em>"He seemed devoid of human feelings."</em></p>
   <p>pëmon in cukto köi di niltügu hoi ozüul woküt hön pëmon yë möi düi zomo.&emsp;<em>"The contract can be terminated at any time with the agreement of both parties."</em></p>
 </HisyeoTabs>
 
