--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -19,15 +19,15 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 <HisyeoTabs>
 <p>pinton lono poivön küon.&emsp;<em>The sun shines.</em></p>
-<p>pinton lono poivön küon pı yotkuwo.&emsp;<em>The sun is shining.</em></p>
+<p>pinton lono poivön küon pı möcipo.&emsp;<em>The sun is shining.</em></p>
 <p>pinton lono poivön si küon.&emsp;<em>The sun shone.</em></p>
 <p>pinton lono ke poivön küon.&emsp;<em>The sun will shine.</em></p>
 <p>pinton lono poivön küon pı ılık.&emsp;<em>The sun has been shining.</em></p>
-<p>pinton lono poivön küon pı yotkuwo pı woküt dizel&emsp;<em>The sun is shining again.</em></p>
+<p>pinton lono poivön küon pı möcipo pı woküt dizel&emsp;<em>The sun is shining again.</em></p>
 <p>pinton lono ke poivön küon hoi lono uklo.&emsp;<em>The sun will shine tomorrow.</em></p>
 <p>pinton lono poivön küon pı ëto.&emsp;<em>The sun shines brightly.</em></p>
 <p>pinton lono yë küon ëto poivön küon.&emsp;<em>The bright sun shines.</em></p>
-<p>pinton lono di mulö pı yotkuwo hoi ipüdü.&emsp;<em>The sun is rising now.</em></p>
+<p>pinton lono di mulö pı möcipo hoi ipüdü.&emsp;<em>The sun is rising now.</em></p>
 <p>möi umo pı oltü öitun.&emsp;<em>All the people shouted.</em></p>
 <p>yoüti umo pı oltü öitun.&emsp;<em>Some of the people shouted.</em></p>
 <p>ëto umo pı oltü öitun pı düi.&emsp;<em>Many of the people shouted twice.</em></p>
@@ -35,9 +35,9 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>mocko xonluk tüu zoston pı mulö.&emsp;<em>The kitten jumped up.</em></p>
 <p>mocko xonluk tüu zoston müt miëpıl potuk.&emsp;<em>The kitten jumped onto the table.</em></p>
 <p>mocko xonluk cömël lı si cok. &emsp;<em>My little kitten walked away.</em></p>
-<p>lı hüzon pı yotkuwo.&emsp;<em>It's raining.</em></p>
+<p>lı hüzon pı möcipo.&emsp;<em>It's raining.</em></p>
 <p>hüzon di si müt koli.&emsp;<em>The rain came down.</em></p>
-<p>mocko pı yotkuwo kelo hoi hüzon.&emsp;<em>The kitten is playing in the rain.</em></p>
+<p>mocko pı möcipo kelo hoi hüzon.&emsp;<em>The kitten is playing in the rain.</em></p>
 <p>niltügu si hüzon.&emsp;<em>The rain has stopped.</em></p>
 <p>pı zelen ke niltügu hüzon.&emsp;<em>Soon the rain will stop.</em></p>
 <p>noyo xiwon vos pı zelen niltügu hüzon.&emsp;<em>I hope the rain stops soon.</em></p>
@@ -55,11 +55,11 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nü küu mokon pı dilë eswen.&emsp;<em>We should eat more slowly.</em></p>
 <p>nimü di si hoi övo pı hëlxun otıkon.&emsp;<em>You have come too soon.</em></p>
 <p>nimü küu cukto pı cinmi eswen.&emsp;<em>You must write more neatly.</em></p>
-<p>hön öpöstü müstokin lı totsı ü nıwos moxo cënpö küzoü.&emsp;<em>Directly opposite stands a wonderful palace.</em></p>
+<p>hön elentët müstokin lı totsı ü nıwos moxo cënpö küzoü.&emsp;<em>Directly opposite stands a wonderful palace.</em></p>
 <p>zowo yë umo Henli köi yosten yök titon dündon. &emsp;<em>Henry's dog is lost.</em></p>
 <p>mocko noyo lı nëlö.&emsp;<em>My cat is black.</em></p>
 <p>döcui umo yë umo wohi xonluk cüti lı kopüt.&emsp;<em>The little girl's doll is broken.</em></p>
-<p>&emsp;<em>I usually sleep soundly.</em></p>
+<p>noyo &emsp;<em>I usually sleep soundly.</em></p>
 <p>&emsp;<em>The children ran after Jack.</em></p>
 <p>&emsp;<em>I can play after school.</em></p>
 <p>&emsp;<em>We went to the village for a visit.</em></p>
