--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -39,7 +39,7 @@ that you'll need to count all the way up to a trillion.
         <tr><td>6</td><td><HisyeoText kind='latin'>toü</HisyeoText></td></tr>
         <tr><td>7</td><td><HisyeoText kind='latin'>xëti</HisyeoText></td></tr>
         <tr><td>8</td><td><HisyeoText kind='latin'>tukwos</HisyeoText></td></tr>
-        <tr><td>9</td><td><HisyeoText kind='latin'>tiso</HisyeoText></td></tr>
+        <tr><td>9</td><td><HisyeoText kind='latin'>eson</HisyeoText></td></tr>
         <tr><td>10</td><td><HisyeoText kind='latin'>dus</HisyeoText></td></tr>
         <tr><td>11</td><td><HisyeoText kind='latin'>önsu</HisyeoText></td></tr>
         <tr><td>12</td><td><HisyeoText kind='latin'>pole</HisyeoText></td></tr>
@@ -49,7 +49,7 @@ that you'll need to count all the way up to a trillion.
         <tr><td>16</td><td><HisyeoText kind='latin'>ses</HisyeoText></td></tr>
         <tr><td>17</td><td><HisyeoText kind='latin'>dus xëti</HisyeoText></td></tr>
         <tr><td>18</td><td><HisyeoText kind='latin'>dus tukwos</HisyeoText></td></tr>
-        <tr><td>19</td><td><HisyeoText kind='latin'>dus tiso</HisyeoText></td></tr>
+        <tr><td>19</td><td><HisyeoText kind='latin'>dus eson</HisyeoText></td></tr>
         <tr><td>20</td><td><HisyeoText kind='latin'>düi dus</HisyeoText></td></tr>
         <tr><td>21</td><td><HisyeoText kind='latin'>düi dus kut</HisyeoText></td></tr>
         <tr><td>22</td><td><HisyeoText kind='latin'>düi dus düi</HisyeoText></td></tr>
@@ -59,7 +59,7 @@ that you'll need to count all the way up to a trillion.
         <tr><td>26</td><td><HisyeoText kind='latin'>düi dus toü</HisyeoText></td></tr>
         <tr><td>27</td><td><HisyeoText kind='latin'>düi dus xëti</HisyeoText></td></tr>
         <tr><td>28</td><td><HisyeoText kind='latin'>düi dus tukwos</HisyeoText></td></tr>
-        <tr><td>29</td><td><HisyeoText kind='latin'>düi dus tiso</HisyeoText></td></tr>
+        <tr><td>29</td><td><HisyeoText kind='latin'>düi dus eson</HisyeoText></td></tr>
         <tr><td>30</td><td><HisyeoText kind='latin'>son dus</HisyeoText></td></tr>
         <tr><td>31</td><td><HisyeoText kind='latin'>son dus kut</HisyeoText></td></tr>
         <tr><td>32</td><td><HisyeoText kind='latin'>son dus düi</HisyeoText></td></tr>
@@ -69,19 +69,19 @@ that you'll need to count all the way up to a trillion.
         <tr><td>36</td><td><HisyeoText kind='latin'>son dus toü</HisyeoText></td></tr>
         <tr><td>37</td><td><HisyeoText kind='latin'>son dus xëti</HisyeoText></td></tr>
         <tr><td>38</td><td><HisyeoText kind='latin'>son dus tukwos</HisyeoText></td></tr>
-        <tr><td>39</td><td><HisyeoText kind='latin'>son dus tiso</HisyeoText></td></tr>
+        <tr><td>39</td><td><HisyeoText kind='latin'>son dus eson</HisyeoText></td></tr>
         <tr><td>40</td><td><HisyeoText kind='latin'>nonkü dus</HisyeoText></td></tr>
         <tr><td>50</td><td><HisyeoText kind='latin'>tiü dus</HisyeoText></td></tr>
         <tr><td>60</td><td><HisyeoText kind='latin'>toü dus</HisyeoText></td></tr>
         <tr><td>70</td><td><HisyeoText kind='latin'>xëti dus</HisyeoText></td></tr>
         <tr><td>80</td><td><HisyeoText kind='latin'>tukwos dus</HisyeoText></td></tr>
-        <tr><td>90</td><td><HisyeoText kind='latin'>tiso dus</HisyeoText></td></tr>
+        <tr><td>90</td><td><HisyeoText kind='latin'>eson dus</HisyeoText></td></tr>
         <tr><td>100</td><td><HisyeoText kind='latin'>viyën</HisyeoText></td></tr>
         <tr><td>101</td><td><HisyeoText kind='latin'>viyën kut</HisyeoText></td></tr>
         <tr><td>234</td><td><HisyeoText kind='latin'>düi viyën son dus nonkü</HisyeoText></td></tr>
         <tr><td>1000</td><td><HisyeoText kind='latin'>cın kut</HisyeoText></td></tr>
         <tr><td>1,000,000</td><td><HisyeoText kind='latin'>cın düi</HisyeoText></td></tr>
-        <tr><td>1,999</td><td><HisyeoText kind='latin'>cın kut,tiso viyën tiso dus tiso</HisyeoText></td></tr>
+        <tr><td>1,999</td><td><HisyeoText kind='latin'>cın kut,eson viyën eson dus eson</HisyeoText></td></tr>
         <tr><td>1,234,567</td><td><HisyeoText kind='latin'>cın düi, düi viyën son dus nonkü cın kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
       </tbody>
     </table>
@@ -104,7 +104,7 @@ that you'll need to count all the way up to a trillion.
         <tr><td>6</td><td><HisyeoText kind='abugida'>toü</HisyeoText></td></tr>
         <tr><td>7</td><td><HisyeoText kind='abugida'>xëti</HisyeoText></td></tr>
         <tr><td>8</td><td><HisyeoText kind='abugida'>tukwos</HisyeoText></td></tr>
-        <tr><td>9</td><td><HisyeoText kind='abugida'>tiso</HisyeoText></td></tr>
+        <tr><td>9</td><td><HisyeoText kind='abugida'>eson</HisyeoText></td></tr>
         <tr><td>10</td><td><HisyeoText kind='abugida'>dus</HisyeoText></td></tr>
         <tr><td>11</td><td><HisyeoText kind='abugida'>önsu</HisyeoText></td></tr>
         <tr><td>12</td><td><HisyeoText kind='abugida'>pole</HisyeoText></td></tr>
@@ -114,7 +114,7 @@ that you'll need to count all the way up to a trillion.
         <tr><td>16</td><td><HisyeoText kind='abugida'>ses</HisyeoText></td></tr>
         <tr><td>17</td><td><HisyeoText kind='abugida'>dus xëti</HisyeoText></td></tr>
         <tr><td>18</td><td><HisyeoText kind='abugida'>dus tukwos</HisyeoText></td></tr>
-        <tr><td>19</td><td><HisyeoText kind='abugida'>dus tiso</HisyeoText></td></tr>
+        <tr><td>19</td><td><HisyeoText kind='abugida'>dus eson</HisyeoText></td></tr>
         <tr><td>20</td><td><HisyeoText kind='abugida'>düi dus</HisyeoText></td></tr>
         <tr><td>21</td><td><HisyeoText kind='abugida'>düi dus kut</HisyeoText></td></tr>
         <tr><td>22</td><td><HisyeoText kind='abugida'>düi dus düi</HisyeoText></td></tr>
@@ -124,7 +124,7 @@ that you'll need to count all the way up to a trillion.
         <tr><td>26</td><td><HisyeoText kind='abugida'>düi dus toü</HisyeoText></td></tr>
         <tr><td>27</td><td><HisyeoText kind='abugida'>düi dus xëti</HisyeoText></td></tr>
         <tr><td>28</td><td><HisyeoText kind='abugida'>düi dus tukwos</HisyeoText></td></tr>
-        <tr><td>29</td><td><HisyeoText kind='abugida'>düi dus tiso</HisyeoText></td></tr>
+        <tr><td>29</td><td><HisyeoText kind='abugida'>düi dus eson</HisyeoText></td></tr>
         <tr><td>30</td><td><HisyeoText kind='abugida'>son dus</HisyeoText></td></tr>
         <tr><td>31</td><td><HisyeoText kind='abugida'>son dus kut</HisyeoText></td></tr>
         <tr><td>32</td><td><HisyeoText kind='abugida'>son dus düi</HisyeoText></td></tr>
@@ -134,19 +134,19 @@ that you'll need to count all the way up to a trillion.
         <tr><td>36</td><td><HisyeoText kind='abugida'>son dus toü</HisyeoText></td></tr>
         <tr><td>37</td><td><HisyeoText kind='abugida'>son dus xëti</HisyeoText></td></tr>
         <tr><td>38</td><td><HisyeoText kind='abugida'>son dus tukwos</HisyeoText></td></tr>
-        <tr><td>39</td><td><HisyeoText kind='abugida'>son dus tiso</HisyeoText></td></tr>
+        <tr><td>39</td><td><HisyeoText kind='abugida'>son dus eson</HisyeoText></td></tr>
         <tr><td>40</td><td><HisyeoText kind='abugida'>nonkü dus</HisyeoText></td></tr>
         <tr><td>50</td><td><HisyeoText kind='abugida'>tiü dus</HisyeoText></td></tr>
         <tr><td>60</td><td><HisyeoText kind='abugida'>toü dus</HisyeoText></td></tr>
         <tr><td>70</td><td><HisyeoText kind='abugida'>xëti dus</HisyeoText></td></tr>
         <tr><td>80</td><td><HisyeoText kind='abugida'>tukwos dus</HisyeoText></td></tr>
-        <tr><td>90</td><td><HisyeoText kind='abugida'>tiso dus</HisyeoText></td></tr>
+        <tr><td>90</td><td><HisyeoText kind='abugida'>eson dus</HisyeoText></td></tr>
         <tr><td>100</td><td><HisyeoText kind='abugida'>viyën</HisyeoText></td></tr>
         <tr><td>101</td><td><HisyeoText kind='abugida'>viyën kut</HisyeoText></td></tr>
         <tr><td>234</td><td><HisyeoText kind='abugida'>düi viyën son dus nonkü</HisyeoText></td></tr>
         <tr><td>1000</td><td><HisyeoText kind='abugida'>cın kut</HisyeoText></td></tr>
         <tr><td>1,000,000</td><td><HisyeoText kind='abugida'>cın düi</HisyeoText></td></tr>
-        <tr><td>1,999</td><td><HisyeoText kind='abugida'>cın kut,tiso viyën tiso dus tiso</HisyeoText></td></tr>
+        <tr><td>1,999</td><td><HisyeoText kind='abugida'>cın kut,eson viyën eson dus eson</HisyeoText></td></tr>
         <tr><td>1,234,567</td><td><HisyeoText kind='abugida'>cın düi, düi viyën son dus nonkü cın kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
       </tbody>
     </table>
@@ -284,7 +284,7 @@ ordinal numbers that were shown above.
 | June      | <HisyeoText kind='latin'>wuto toü</HisyeoText>    | <HisyeoText kind='abugida'>wuto toü</HisyeoText>    |
 | July      | <HisyeoText kind='latin'>wuto xëti</HisyeoText>   | <HisyeoText kind='abugida'>wuto xëti</HisyeoText>   |
 | August    | <HisyeoText kind='latin'>wuto tukwos</HisyeoText> | <HisyeoText kind='abugida'>wuto tukwos</HisyeoText> |
-| September | <HisyeoText kind='latin'>wuto tiso</HisyeoText>   | <HisyeoText kind='abugida'>wuto tiso</HisyeoText>   |
+| September | <HisyeoText kind='latin'>wuto eson</HisyeoText>   | <HisyeoText kind='abugida'>wuto eson</HisyeoText>   |
 | October   | <HisyeoText kind='latin'>wuto dus</HisyeoText>    | <HisyeoText kind='abugida'>wuto dus</HisyeoText>    |
 | November  | <HisyeoText kind='latin'>wuto önsu</HisyeoText>   | <HisyeoText kind='abugida'>wuto önsu</HisyeoText>   |
 | December  | <HisyeoText kind='latin'>wuto pole</HisyeoText>   | <HisyeoText kind='abugida'>wuto pole</HisyeoText>   |
@@ -299,7 +299,7 @@ WIP Translation
 :::
 
 <HisyeoTabs>
-  <p>yünyoü son dus lono ü wuto tiso,</p>
+  <p>yünyoü son dus lono ü wuto eson,</p>
   <p>wuto nonkü, wuto toü, moliyü wuto önsu,</p>
   <p>ü möi dizel yünyoü son dus kut,</p>
   <p>ü yök wuto düi do lon düi dus tukwos lono,</p>
@@ -348,7 +348,7 @@ use xünyu preceding the final year digit. If you are referring to a
 recent date, you can often just mention the final segment.
 
 <HisyeoTabs>
-  <p>dus tiso xëti dus xëti&emsp;<em>1977</em></p>
+  <p>dus eson xëti dus xëti&emsp;<em>1977</em></p>
   <p>son xünyu son&emsp;<em>303</em></p>
 </HisyeoTabs>
       
@@ -395,7 +395,7 @@ to return to the main sentence clause for the remaining consituents.
         <dd><HisyeoText kind='latin'>moliyü lözic nimü hoi lono zık?</HisyeoText></dd>
         <dd><em>And when is your birthday?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd><HisyeoText kind='latin'>lono düi dus tiso yë wuto toü.</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>lono düi dus eson yë wuto toü.</HisyeoText></dd>
         <dd><em>June 29th</em></dd>
       </dl>
     </TabItem>
@@ -419,7 +419,7 @@ to return to the main sentence clause for the remaining consituents.
         <dd><HisyeoText kind='abugida'>moliyü lözic nimü hoi lono zık?</HisyeoText></dd>
         <dd><em>And when is your birthday?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd><HisyeoText kind='abugida'>lono düi dus tiso yë wuto toü.</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>lono düi dus eson yë wuto toü.</HisyeoText></dd>
         <dd><em>June 29th</em></dd>
       </dl>
     </TabItem>
@@ -461,7 +461,7 @@ create times like "23:00". Often times, you can deduce which half of the day
 from context. If you need to use the equivalent of "a.m." or "p.m":
 
 <HisyeoTabs>
-  <p>suhot tiso yë ılık lono mutyu&emsp;<em>"9 o'clock before noon"</em></p>
+  <p>suhot eson yë ılık lono mutyu&emsp;<em>"9 o'clock before noon"</em></p>
   <p>suhot tiü yë cıhöü lono mutyu&emsp;<em>"9 o'clock after noon"</em></p>
 </HisyeoTabs>
 
@@ -580,7 +580,7 @@ millimeters.
 > —Will Sullivan, Smithsonian Magazine, 2 Aug. 2024
 
 <HisyeoTabs>
-  <p>hön tüek yë wëilun ü cıngi mëtliös yünyoü zötëstö len oxon do ëo lö pı mulö ölë viyën volo zënsi inpoli lon toü öni kut cüti yë lomö hoi mënüs en kut sünkon.</p>
+  <p>hön tüek yë wëilun ü cıngi mëtliös yünyoü zötëstö len oxon do ëo lö pı mulö ölë viyën volo zënsi inpoli lon toü öni kut cüti yë kildo hoi mënüs en kut sünkon.</p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
